@@ -52,5 +52,6 @@ S3method(plot, bmdboot)
 
 export(ecdfplotwithCI)
 export(curvesplot)
+export(targetplot)
 export(bmdplotwithgradient)
 export(ecdfquantileplot)
